--- a/APMLibrary.Web/APMLibrary.Web.csproj
+++ b/APMLibrary.Web/APMLibrary.Web.csproj
@@ -19,11 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\APMLibrary.Bll\APMLibrary.Bll.csproj" />
     <ProjectReference Include="..\APMLibrary.Dal\APMLibrary.Dal.csproj" />
   </ItemGroup>
 
