--- a/APMLibrary.Web/appsettings.json
+++ b/APMLibrary.Web/appsettings.json
@@ -8,5 +8,11 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Database=librarydb;Username=postgres;Password=prolodgy778"
+    },
+    "ListCatalog": {
+        "MaxItemsOnPage": "10"
+    },
+    "FileLoggerOptions": {
+        "FilePath": "database.log"
     }
 }
