--- a/APMLibrary.Web/APMLibrary.Web.csproj
+++ b/APMLibrary.Web/APMLibrary.Web.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\APMLibrary.Bll\APMLibrary.Bll.csproj" />
+    <ProjectReference Include="..\APMLibrary.Bll\APMLibrary.Bll.csproj" />
     <ProjectReference Include="..\APMLibrary.Dal\APMLibrary.Dal.csproj" />
   </ItemGroup>
 
