--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,10 @@ services:
 
     ports:
       - '8080:80'
-  
+
+    depends_on:
+      - apmlibrarydb
+      
   apmlibrarydb:
     image: postgres:latest
 
